2009-03-08  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GenPod.pm (xsub_to_pod): Don't wrap the argument types of xsubs
	with a superfluous pair of '=over' and '=back'.

2009-03-08  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GenPod.pm (podify_enums_and_flags): Don't generate 'ENUMS AND
	FLAGS' entries for Glib::Enum and Glib::Flags since they don't
	have values anyway.

2009-03-01  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/7.t
	* GSignal.xs (gperl_signal_connect): Don't leak the GClosure
	object when an invalid signal name is passed in.  Patch by
	Kevin Ryde.

2009-03-01  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GType.xs (gperl_fundamental_type_from_obj): Check the SV for
	definedness before passing it to SvRV.  This fixes a test failure
	on MSWin32 in t/c.t.

2009-03-01  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/filename.t: Add more tests for Glib::filename_to_uri.  Patch
	by Kevin Ryde.

2009-02-22  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GBoxed.xs
	* GType.xs: Fix errors reported by podchecker.

2009-02-21  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Makefile.PL: Tell the CPAN indexer to ignore the package 'MY'
	used by Glib::MakeHelper.

2009-02-21  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GenPod.pm (xsdoc2pod): Instead of relying on one final '=cut',
	close every opened POD paragraph separately.  This fixes POD
	errors that occurred when '=for position COPYRIGHT' was used.
	Original patch by Ryan Niebur.

2009-02-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GBookmarkFile.xs: Don't document Glib::BookmarkFile::set_added,
	set_modified, and set_visited as functions; they're methods.

	* t/h.t: Test Glib::BookmarkFile::set_added, set_modified, and
	set_visited and their associated getters.

2009-02-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm: Use an '=encoding utf8' directive for the AUTHORS POD
	section so that non-ASCII characters are handled correctly.

2009-02-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm